# Qutlas-dt

./: .env.example  .env.local  .gitignore  .prettierignore  ADVANCED_FEATURES_IMPLEMENTED.md  AI_GEOMETRY_SYSTEM.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  AUTH_OVERHAUL_SUMMARY.md  AUTH_TESTING_GUIDE.md  BUILD_ERROR_RESOLUTION.md  CADMIUM_MIGRATION.md  CANVAS_FIX_REPORT.md  CATALOG_IMPLEMENTATION.md  COMPLETE_FEATURES_SUMMARY.md  COMPREHENSIVE_FIX_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_FILES.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.txt  DEVELOPMENT.md  ENHANCED_GEOMETRY_KERNEL_SUMMARY.md  ENHANCED_KERNEL_INTEGRATION_REPORT.md  FIXES_IMPLEMENTED.md  GEOMETRY_UI_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTENT_BRIDGE_ARCHITECTURE.md  INTENT_BRIDGE_CHECKLIST.md  INTENT_BRIDGE_IMPLEMENTATION.md  INTENT_BRIDGE_SUMMARY.md  MANUFACTURABILITY_INTEGRATION_COMPLETE.md  MANUFACTURABILITY_PANEL_STATUS.md  MIGRATION_COMPLETE.md  OCCT_INTEGRATION_NOTES.md  OCCT_WASM_BUILD_GUIDE.md  OCCT_WASM_IMPLEMENTATION_SUMMARY.md  (+33 more)
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
backend/: Dockerfile  package.json
components/: CanvasViewer.tsx  Viewer.tsx  ai-geometry-panel.tsx  app-auth-provider.tsx  auth-guard.tsx  collapsible-section.tsx  confirmation-dialog.tsx  currency-selector.tsx  error-boundary.tsx  footer.tsx  header.tsx  hero-section.tsx  intent-chat-workspace.tsx  intent-chat.tsx  loading-overlay.tsx  loading-spinner.tsx  logo.tsx  material-library.tsx  navbar.tsx  onboarding-tour.tsx  price-display.tsx  segmented-panel.tsx  theme-toggle.tsx  toast-manager.tsx  toolbar-menu.tsx  ui.ts
design/: figma-tokens.json
docs/: API_REFERENCE.md  CADA_WORKSPACE_ANALYSIS.md  CSG_IMPLEMENTATION.md  TESTING_CHECKLIST.md  TOOLPATH_FEATURE.md  WORKSPACE_INTEGRATION_PLAN.md  WORKSPACE_QUTLAS_CURRENT_STATE.md  api-contracts.md  catalog.schema.json  deployment.md  hub-onboarding.md  openapi.yaml  qdf.schema.json  sla.md
hooks/: use-ai-geometry.ts  use-cadmium-worker.ts  use-collaboration.ts  use-currency.ts  use-job-autosave.tsx  use-keyboard-shortcuts.tsx  use-media-query.ts  use-occt-worker.ts  use-projects.ts  use-stats.ts  use-workspace-kernel.ts  use-workspace.tsx
hub-agent/: Dockerfile
lib/: api-client.ts  auth-context.tsx  cadmium-client.ts  canvas-utils.ts  catalog-data.ts  collaboration.ts  context-menu-handler.ts  currency-context.tsx  deepseek-client.ts  error-utils.ts  finish-material-compatibility.ts  finishes.ts  flutterwave-client.ts  generate-catalog-parts.ts  (+12 more)
occt-wrapper/: CMakeLists.txt  README.md  build-occt-wasm.sh  build.sh  compile-wasm.sh
occt-wrapper/emscripten/: emscripten.cmake
occt-wrapper/include/: occt_wrapper.h
occt-wrapper/src/: occt-loader.ts  occt-worker.ts  occt_bindings.cpp  occt_wrapper.cpp
wasm/cadmium-core/: Cargo.toml  build.sh
wasm/cadmium-core/pkg/: cadmium_core.js  cadmium_core_bg.js  cadmium_core_bg.wasm  index.ts
wasm/cadmium-core/src/: csg.rs  lib.rs  material.rs  validation.rs
wasm/geometry-kernel/: BUILD_GUIDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  build.sh
wasm/geometry-kernel/.cargo/: config.toml
wasm/geometry-kernel/src/: errors.rs  hashing.rs  lib.rs  types.rs
wasm/geometry-kernel/src/compiler/: csg_compiler.rs  csg_evaluator.rs  csg_tree.rs  intent_parser.rs  mod.rs
wasm/geometry-kernel/src/geometry/: bounding_box.rs  constraints.rs  mod.rs  operations.rs  primitives.rs
wasm/geometry-kernel/src/geometry/analysis/: mass_props.rs  mod.rs
wasm/geometry-kernel/src/geometry/ir/: feature.rs  graph.rs  mod.rs  node.rs  validate.rs
wasm/geometry-kernel/src/geometry/topology/: edge.rs  face.rs  mod.rs  shell.rs  solid.rs
(+207 files in other folders)
