[package]
name = "cadmium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
sha2 = "0.10"
nalgebra = "0.32"
ncollide3d = "0.32"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "1.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
