[package]
name = "qutlas-geometry-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"

# Note: These geometry libraries will be added when implementing the kernel
# nalgebra = "0.33"
# truck-geometry = "0.4"
# truck-modeling = "0.4"
# truck-polymesh = "0.4"
# parry3d = "0.15"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
