[package]
name = "qutlas-geometry-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Qutlas Platform Team"]
description = "Production-grade geometry kernel for CAD platform"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
console_error_panic_hook = { version = "0.1", optional = true }

# Note: Geometry libraries are planned for Phase 2.5
# For Phase 2, we're implementing a foundational kernel with:
# - Deterministic primitive generation
# - Basic CSG operations (union, subtract, intersect)
# - Mesh generation with proper topology
# - Content-addressed caching
# - Manufacturability validation
#
# Future phases will integrate:
# - truck-geometry = "0.4"
# - truck-modeling = "0.4"
# - truck-polymesh = "0.4"
# - parry3d = "0.15"
# - nalgebra = "0.33"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = "s"     # Optimize for size
